# nonebot_plugin_quote

./: .gitignore  README.md  batch.md  batch_upload.md  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
nonebot_plugin_quote/: __init__.py  config.py  make_image.py  qq_make_image.py  task.py  template.html  test.json
nonebot_plugin_quote/pilmoji/: __init__.py  core.py  helpers.py  source.py
