[tool.poetry]
name = "nonebot-plugin-quote"
version = "0.4.2.1"
description = "一款适用于QQ群聊天的语录库插件"
authors = ["RongRongJi <316315867@qq.com>", "Hanserprpr <2041283903@qq.com>", "Pigz2538 <2281717797@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_quote"}]

[tool.poetry.dependencies]
python = "^3.8"
jieba = "^0.42.1"
nonebot2 = "^2.0.0rc3"
nonebot-adapter-onebot = "^2.2.1"
paddleocr = "^2.9.1"
paddlepaddle = "^2.6.2"
setuptools = "^75.3.0"
httpx = ">=0.27.2"
pillow = ">=11.1,<11.2"
emoji = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
